# CurveNetModeller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  radme.md  vcpkg.json
resources/images/skybox/: skyboxes-LICENSE.txt
resources/shaders/: color.frag  color.vert  screen.frag  shaded.frag  skybox.frag  skybox.vert  trafo.vert  trafo_norm.vert
src/: CONSTANTS.h  main.cpp
src/command/: add_node_to_curve_command.hpp  command_history.hpp  i_command.hpp  remove_node_from_curve_command.hpp
src/controller/: bezier_curve_controller.hpp  selection_manager.hpp
src/editor/controller/: bezier_curve_controller.hpp  curve_mesh_controller.cpp  curve_mesh_controller.h
src/editor/interface/: PointInterface.hpp  bezier_node_interface.hpp  curve_mesh_interface.hpp  element_interfaces.cpp  element_interfaces.h  element_interfaces.hpp  global_actions_interface.hpp  i_interface.hpp  object_interface.hpp  transform_interface.hpp
src/editor/view/: bezier_curve_curvature_comb_view.hpp  bezier_node_view.cpp  bezier_node_view.h  bezier_node_view.hpp  coons_surface_view.cpp  coons_surface_view.h  coons_surface_view.hpp  curve_curvature_comb_view.cpp  curve_curvature_comb_view.h  curve_curvature_comb_view.hpp  curve_view.cpp  curve_view.h  curve_view.hpp  floor_grid.cpp  floor_grid.h  floor_grid.hpp  render_point_generator.cpp  render_point_generator.h  skybox.cpp  skybox.h  skybox.hpp
src/editor/workspace/: model_to_interface.hpp  properties.hpp  viewport.hpp  workspaces.hpp
src/engine/: camera.cpp  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
src/gl_engine/: camera.hpp  framebuffer.hpp  gl_engine.h  material.hpp  mesh.hpp  object.hpp  shader.hpp  shader_shaders.hpp  shared_shaders.hpp  texture.hpp  transform.hpp  util.cpp  util.h
src/gl_engine/legacy/: camera.h
src/interface/: PointInterface.hpp
src/model/: CurveMesh.cpp  CurveMesh.h  ICurve.hpp  IElement.hpp  ISpline.hpp  bezier_curve.cpp  bezier_curve.h  bezier_node.cpp  bezier_node.h  coons_surface.cpp  coons_surface.h  coons_surface.hpp  curve_mesh.cpp  curve_mesh.h  i_Curve.hpp  i_Spline.hpp  object.cpp  object.h  point.h  scene.hpp  transform.hpp
src/model/constraint/: i_constraint.hpp  point_on_curve_constraint.cpp  point_on_curve_constraint.h  point_on_curve_constraint.hpp  same_point_position_constraint.cpp  same_point_position_constraint.h  same_point_position_constraint.hpp
src/model/element/: bezier_curve.cpp  bezier_curve.h  bezier_node.cpp  bezier_node.h  coons_surface.cpp  coons_surface.h  i_Curve.hpp  i_Node.hpp  i_Spline.hpp  i_Surface.hpp  point.cpp  point.h
src/model/object/: curve_mesh.cpp  curve_mesh.h  object.h  transform.cpp  transform.h
src/shader/: screen.frag  screen.vert
src/util/: drag_float_3_colored.hpp  event.hpp  file_reader.hpp  glm_serializer.hpp  observer_generator.hpp  registry.hpp  screenshot.hpp  util.hpp
src/view/: bezier_curve_curvature_comb_view.hpp  bezier_curve_view.hpp  bezier_node_view.hpp  coons_surface_view.hpp  floor_grid.hpp
src/workspace/: properties.hpp  viewport.hpp
tests/: test_bezier.cpp  test_transform.cpp
tests/model/: test_bezier.cpp  test_coons.cpp  test_transform.cpp
